# aries-vcx

./: .gitignore
agency_client/src/: httpclient.rs
aries_vcx/: Cargo.toml
aries_vcx/src/: transport.rs
aries_vcx/src/common/: mod.rs  test_utils.rs
aries_vcx/src/core/profile/: vdrtools_profile.rs
aries_vcx/src/utils/: devsetup.rs  mod.rs
aries_vcx_core/src/indy/: wallet.rs
aries_vcx_core/src/indy/ledger/: mod.rs
aries_vcx_core/src/indy/primitives/: credential_definition.rs  credential_schema.rs  revocation_registry.rs
aries_vcx_core/src/indy/utils/: mod.rs
aries_vcx_core/src/ledger/: mod.rs
libvdrtools/: Cargo.toml
libvdrtools/indy-api-types/: Cargo.toml
libvdrtools/indy-api-types/src/: errors.rs  lib.rs
libvdrtools/indy-utils/: Cargo.toml
libvdrtools/indy-wallet/src/: encryption.rs  iterator.rs  lib.rs  wallet.rs
libvdrtools/src/: lib.rs
libvdrtools/src/controllers/: did.rs  mod.rs  wallet.rs
libvdrtools/src/services/: mod.rs
uniffi_aries_vcx/core/: Cargo.toml  credDef2.json  revregdef.json  schema.json
uniffi_aries_vcx/core/scripts/: build_android.sh  build_ios.sh
uniffi_aries_vcx/core/src/: lib.rs  vcx.swift  vcx.udl  vcxFFI.h  vcxFFI.modulemap
uniffi_aries_vcx/core/src/core/: http_client.rs  profile.rs
uniffi_aries_vcx/core/src/errors/: error.rs
uniffi_aries_vcx/core/src/handlers/: mod.rs
uniffi_aries_vcx/core/src/handlers/connection/: connection.rs
uniffi_aries_vcx/core/src/handlers/issuance/: cred.json  issuance.rs  mod.rs
uniffi_aries_vcx/core/src/handlers/proof/: mod.rs  proof.rs  verify.rs
uniffi_aries_vcx/core/src/org/hyperledger/ariesvcx/: vcx.kt
uniffi_aries_vcx/core/vcx-android/: local.properties  settings.gradle
uniffi_aries_vcx/core/vcx-android/gradle/wrapper/: gradle-wrapper.properties
uniffi_aries_vcx/core/vcx-android/vcx/: build.gradle  local.properties
uniffi_aries_vcx/core/vcx-android/vcx/src/main/java/org/hyperledger/ariesvcx/: vcx.kt
(+15 files in other folders)
