[package]
name = "uniffi_aries_vcx"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib","staticlib"]
name = "uniffi_vcx"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = "0.23.0"
aries-vcx = { path = "../../aries_vcx" }
tokio = { version = "1.24.1" }
once_cell = "1.17.0"
thiserror = "1.0.38"
serde_json = "1.0.91"
async-trait = "0.1.64"
diddoc_legacy = { path = "../../diddoc_legacy" }
url = "2.3.1"
ureq = { version = "2.6.2", features = ["json"] }
android_logger = "0.13.1"
log = "0.4.19"
openssl = {version = "0.10", features = ["vendored"]}
base64 = "0.21.2"
serde = { version = "1.0.164", features = ["derive"] }
chrono = "0.4.26"
libvdrtools = {path = "../../libvdrtools"}
[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build", "cli" ] }

